# tun2socks

./: Cargo.toml  README.rst
crates/netlink/: Cargo.toml  README.rst
crates/netlink/src/: error.rs
crates/sysconfig/: Cargo.toml  note.rs
crates/sysconfig/examples/: dns.rs
crates/sysconfig/src/dns/: mod.rs
crates/sysconfig/src/route/: macos.rs
crates/tun/: Cargo.toml
crates/tun/examples/: tunctl.rs
crates/tun/src/: lib.rs
crates/tun/src/sys/: linux.rs  macos.rs  mod.rs
src/: main.rs
